--- a/hugo.yaml
+++ b/hugo.yaml
@@ -60,7 +60,7 @@ params:
   profileMode:
     enabled: true # needs to be explicitly set
     title: Jagadeesh Mummana
-    subtitle: "Personal Tech Blog Site"
+    subtitle: "This is my personal tech blog site =P"
     # imageUrl: "<img location>"
     # imageWidth: 120
     # imageHeight: 120
