--- a/hugo.yaml
+++ b/hugo.yaml
@@ -60,7 +60,7 @@ params:
   profileMode:
     enabled: true # needs to be explicitly set
     title: Jagadeesh Mummana
-    subtitle: "This is my personal tech blog site =P"
+    subtitle: "My Tech BLOG =P"
     imageUrl: "/assets/profile.jpg"
     imageWidth: 120
     imageHeight: 120
