--- a/hugo.yaml
+++ b/hugo.yaml
@@ -61,7 +61,7 @@ params:
     enabled: true # needs to be explicitly set
     title: Jagadeesh Mummana
     subtitle: "My Tech BLOG =P"
-    imageUrl: "/static/profile.jpg"
+    imageUrl: "/assets/profile.jpg"
     imageWidth: 120
     imageHeight: 120
     imageTitle: profile
