fix: changed the base url

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://mummanajagadeesh.github.io/blog/"
+baseURL: "https://mummanajagadeesh.github.io/blog-/"
 title: MJ97 BLOG
 paginate: 5
 theme: PaperMod
